# unitree_go2_ros2

./: README.md
champ_base/include/: message_relay.h  state_estimation.h
champ_base/src/: message_relay.cpp  state_estimation.cpp
unitree_go2_description/urdf/: realsense_d455.xacro  unitree_go2_gazebo.xacro
unitree_go2_description/worlds/: maze_world.sdf  walled_world.sdf
unitree_go2_sim/: CMakeLists.txt  package.xml
unitree_go2_sim/config/nav/: nav2.yaml  slam.yaml
unitree_go2_sim/launch/: go2_nav_launch.py  go2_slam_launch.py  go2_slam_nav_launch.py  pointcloud_to_scan_launch.py  unitree_go2_launch.py
unitree_go2_sim/maps/: go2_map.pgm  go2_map.yaml
unitree_go2_sim/rviz/: rviz.rviz
